# QT-SoftwareHardwaretool

./: .coding-ci.yml  .gitignore  CMakeLists.txt  README.md  doc.qch  eshc.cpp  gchs_hspa.cpp  gchs_hspa.h  haspa_ahg.cpp  haspa_criticalpath.h  haspa_hg.h  haspa_hga.h  haspacpresult.cpp  haspacpresult.ui  haspagaresult.cpp  haspagaresult.ui  hasparesult.cpp  hasparesult.h  hasparesult.ui  hspa_ga.cpp  hspa_ga.h  index.html  klresult.cpp  klresult.ui  logo.rc  mainwindow.cpp  mainwindow.h  mainwindow.ui  matplotlibcpp.h  mmm.cpp  mmm.h  mmmresult.cpp  mmmresult.ui  muppa.cpp  muppa.h  mupparesult.cpp  mupparesult.h  mupparesult.ui  mycollection.qhc  taspa.cpp  (+7 more)
KDChart-qt6/: KDChart  KDGantt  kdchart_version.h
documentation/: HSPA.html  Introduction.html  KL.html  MMM.html  MuPPA.html  TaPSA.html  Tool.qch  Tool.qhc  Tool.qhcp  Tool.qhp  Tool2.qch  Tool2.qhc  a.bat  about.txt  index.html  intro.html  openfile.html  simpletextviewer.qch  simpletextviewer.qhc  simpletextviewer.qhcp  simpletextviewer.qhp
documentation/html/: 1.Introduction.html  2.1.tooloperation.html  2.2TaPSA.html  2.3MuPPA.html  2.4MMM.html  2.5KL.html  2.6HSPA.html
inc/: TrafficSign.h  assistant.h  eshc.h  ganntplot.h  haspa.h  haspa_ahg.h  haspacpresult.h  haspagaresult.h  hspa_ga.h  kl.h  klresult.h  mainwindow.h  mmm.h  mmmresult.h  muppa.h  mupparesult.h  taspa.h  taspa2.h
source/: TrfficSign.cpp  assistant.cpp  eshc.cpp  ganntplot.cpp  haspa.cpp  haspa_criticalpath.cpp  haspa_hg.cpp  haspa_hga.cpp  haspacpresult.cpp  haspacpresult.ui  haspagaresult.cpp  haspagaresult.ui  hasparesult.cpp  hasparesult.ui  hspa_ga.cpp  kl.cpp  klresult.cpp  klresult.ui  main.cpp  mainwindow.cpp  mainwindow.ui  mmmresult.cpp  mmmresult.ui  mupparesult.cpp  mupparesult.ui  taspa.cpp  taspa.ui  taspa2.cpp  tasparesult.cpp  tasparesult.ui  test.py  test_hspa.py
软硬件文件/HSPA/: 书中例子.txt
软硬件文件/HSPA/FFT/FFT2/: FFT2_1.txt
软硬件文件/HSPA/FFT/FFT8/: FFT8_1.txt
软硬件文件/HSPA/Gaussian/num10/: Gaunum10.txt
软硬件文件/HSPA/Gaussian/num11/: Gaunum11.txt
软硬件文件/HSPA/Gaussian/num12/: Gaunum12.txt
软硬件文件/HSPA/Gaussian/num6/: Gaunum6.txt
软硬件文件/HSPA/Gaussian/num7/: Gaunum7.txt
软硬件文件/HSPA/Gaussian/num9/: Gaunum9.txt
软硬件文件/HSPA/RandomTask/Task30/: Task30_1.txt
软硬件文件/HSPA/RandomTask/Task50/: Task50_1.txt
软硬件文件/HSPA/RandomTask/TaskSet1/: Task24.txt  Task32.txt  Task40.txt
软硬件文件/HSPA/RandomTask/Taskset2/: Task16.txt  Task32.txt  Task40.txt
软硬件文件/Haspa/: GA.cpp  TaskPronnum1_mNum4FFT.txt  full.cpp  ssss.txt  taakgaussian_pronum1_mNum13.txt  task20.txt  taskFFT4.txt  task_chen2022.txt  task_eshc.txt  taskgaussian_pronum1.txt  taskpronum3FFT8.txt  test.cpp  test.py  test.txt  wait.txt
软硬件文件/Haspa/FFT/FFT16/: FFT16_1.txt
软硬件文件/Haspa/FFT/FFT2/: FFT2_2.txt
软硬件文件/Haspa/FFT/FFT32/: FFT32_1.txt
软硬件文件/Haspa/FFT/FFT_ccr_0_1/: FFT16_1.txt  FFT2_1.txt  FFT32_1.txt  FFT4_1.txt  FFT8_1.txt
软硬件文件/Haspa/Gaussian/num13/: Gaunum13.txt
软硬件文件/Haspa/Gaussian/num5/: Gaunum5.txt
软硬件文件/Haspa/Gaussian/num8/: Gaunum8.txt
软硬件文件/Haspa/RandomTask/Task10/: Task10_1.txt
软硬件文件/Haspa/RandomTask/Task70/: Task70_1.txt
软硬件文件/Haspa/RandomTask/TaskSet1/: Task16.txt  Task8.txt
软硬件文件/Haspa/RandomTask/Taskset2/: Task24.txt  Task8.txt
软硬件文件/Haspa/test/: 16.txt  24.txt  32.txt  40.txt  8.txt  fft16.txt  fft2.txt  fft32.txt  fft4.txt  fft8.txt  gau10.txt  gau11.txt  gau12.txt  gau13.txt  gau5.txt  gau6.txt  gau7.txt  gau8.txt  gau9.txt  test_FFT.py  test_gau.py  test_randomdataset.py
软硬件文件/Haspa/test/CORE10FPGAN/num_16/: output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output2.txt  output20.txt  output21.txt  output22.txt  output23.txt  output24.txt  output25.txt  output26.txt  output27.txt  output28.txt  output29.txt  output3.txt  output30.txt  output31.txt  output32.txt  output33.txt  output34.txt  output35.txt  output36.txt  output37.txt  output38.txt  output39.txt  output4.txt  output40.txt  output41.txt  output42.txt  output43.txt  output44.txt  output45.txt  (+41 more)
软硬件文件/Haspa/test/CORE10FPGAN/num_24/: output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output2.txt  output20.txt  output21.txt  output22.txt  output23.txt  output24.txt  output25.txt  output26.txt  output27.txt  output28.txt  output29.txt  output3.txt  output30.txt  output31.txt  output32.txt  output33.txt  output34.txt  output35.txt  output36.txt  output37.txt  output38.txt  output39.txt  output4.txt  output40.txt  output41.txt  output42.txt  output43.txt  output44.txt  output45.txt  (+41 more)
软硬件文件/Haspa/test/CORE10FPGAN/num_32/: output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output2.txt  output20.txt  output21.txt  output22.txt  output23.txt  output24.txt  output25.txt  output26.txt  output27.txt  output28.txt  output29.txt  output3.txt  output30.txt  output31.txt  output32.txt  output33.txt  output34.txt  output35.txt  output36.txt  output37.txt  output38.txt  output39.txt  output4.txt  output40.txt  output41.txt  output42.txt  output43.txt  output44.txt  output45.txt  (+41 more)
软硬件文件/Haspa/test/CORE10FPGAN/num_40/: output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output2.txt  output20.txt  output21.txt  output22.txt  output23.txt  output24.txt  output25.txt  output26.txt  output27.txt  output28.txt  output29.txt  output3.txt  output30.txt  output31.txt  output32.txt  (+55 more)
软硬件文件/KL/: KL.txt
软硬件文件/MMM/: 单_全_均链接-书上例子.txt  单_全_均链接-题目.txt  第二题.txt
软硬件文件/Muppa/: 书上例子-6.6.txt  书上例子.txt  课程作业1.txt  课程作业2.txt
软硬件文件/STRRTSBenchMark/802.11/: 802.11a_rate6_MMM.txt  802.11a_rate6_Muppa.txt  802.11a_rate6_taspa.txt
软硬件文件/STRRTSBenchMark/AuodioBeam/: 1.txt
软硬件文件/STRRTSBenchMark/BeamFormer/: BeamFormer_12c_4b_Muppa.txt  BeamFormer_12c_4b_Taspa.txt
软硬件文件/TaPSA/: 课程作业1.txt  课程作业2.txt
软硬件文件/Taspa/: 书上例子.txt
(+2187 files in other folders)
